--- a/apartments/templates/apartments/apartment_confirm_delete.html
+++ b/apartments/templates/apartments/apartment_confirm_delete.html
@@ -1,4 +1,4 @@
-{% extends 'main/base.html' %}
+{% extends 'apartments/index.html' %}
 
 {% block content %}
 <div class="row">
@@ -9,7 +9,7 @@
                     {% csrf_token %}
                     <p>Действительно удалить продукт: {{ object.name }}?</p>
                     <button type="submit" class="btn btn-danger">Подтвердить</button>
-                    <a href="{% url 'main:home' %}" class="btn btn-success">Отмена</a>
+                    <a href="{% url 'apartments:index' %}" class="btn btn-success">Отмена</a>
                 </form>
             </div>
         </div>
