Добавил кнопки удаления и редактирования секции и квартиры

--- a/apartments/templates/apartments/base.html
+++ b/apartments/templates/apartments/base.html
@@ -12,7 +12,8 @@
 <body>
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
     <h1 class="my-0 mr-md-auto font-weight-normal">ТЭП Квартирография</h1>
-
+    <a class="btn btn-outline-primary" href="{% url 'apartments:s_create' %}">Создать секцию</a>
+    <a class="btn btn-outline-primary" href="{% url 'apartments:a_create' %}">Создать квартиру</a>
     <a class="btn btn-outline-primary" href="{% url 'admin:index' %}">Администрирование</a>
 
 </div>
