--- a/apartments/templates/apartments/apartment_confirm_delete.html
+++ b/apartments/templates/apartments/apartment_confirm_delete.html
@@ -7,7 +7,7 @@
             <div class="card-body">
                 <form method="post">
                     {% csrf_token %}
-                    <p>Действительно удалить продукт: {{ object.name }}?</p>
+                    <p>Действительно удалить квартиру: {{ object.name }}?</p>
                     <button type="submit" class="btn btn-danger">Подтвердить</button>
                     <a href="{% url 'apartments:index' %}" class="btn btn-success">Отмена</a>
                 </form>
