--- a/apartments/templates/apartments/section_form.html
+++ b/apartments/templates/apartments/section_form.html
@@ -22,4 +22,91 @@
     </div>
 </div>
 
+<div class="pricing-header px-3 py-2 pt-md-5 pb-md-4 mx-auto text-center">
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">Название</th>
+                <th scope="col">Количество</th>
+                <th scope="col">Площадь жилая</th>
+                <th scope="col">Площадь без летних</th>
+                <th scope="col">Площадь с п.коэфициентами</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% if section.sum_s_count_section != 0 %}
+            <tr>
+                <th class="table-danger">Студии</th>
+                <td class="table-danger">{{ section.sum_s_count_section }}</td>
+                <td class="table-danger">{{ section.sum_s_small_square_section }}</td>
+                <td class="table-danger">{{ section.sum_s_shortened_square_section }}</td>
+                <td class="table-danger">{{ section.sum_s_full_square_section }}</td>
+            </tr>
+            {% endif %}
+            {% if section.sum_k_count_section != 0 %}
+            <tr>
+                <th class="table-primary">1KK</th>
+                <td class="table-primary">{{ section.sum_k_count_section }}</td>
+                <td class="table-primary">{{ section.sum_k_small_square_section }}</td>
+                <td class="table-primary">{{ section.sum_k_shortened_square_section }}</td>
+                <td class="table-primary">{{ section.sum_k_full_square_section }}</td>
+            </tr>
+            {% endif %}
+            {% if section.sum_kk_count_section != 0 %}
+            <tr>
+                <th class="table-warning">2KK</th>
+                <td class="table-warning">{{ section.sum_kk_count_section }}</td>
+                <td class="table-warning">{{ section.sum_kk_small_square_section }}</td>
+                <td class="table-warning">{{ section.sum_kk_shortened_square_section }}</td>
+                <td class="table-warning">{{ section.sum_kk_full_square_section }}</td>
+            </tr>
+            {% endif %}
+            {% if section.sum_kkk_count_section != 0 %}
+            <tr>
+                <th class="table-success">3KK</th>
+                <td class="table-success">{{ section.sum_kkk_count_section }}</td>
+                <td class="table-success">{{ section.sum_kkk_small_square_section }}</td>
+                <td class="table-success">{{ section.sum_kkk_shortened_square_section }}</td>
+                <td class="table-success">{{ section.sum_kkk_full_square_section }}</td>
+            </tr>
+            {% endif %}
+            {% if section.sum_kkkk_count_section != 0 %}
+            <tr>
+                <th style="background-color: #FFBD88">4KK</th>
+                <td style="background-color: #FFBD88">{{ section.sum_kkkk_count_section }}</td>
+                <td style="background-color: #FFBD88">{{ section.sum_kkkk_small_square_section }}</td>
+                <td style="background-color: #FFBD88">{{ section.sum_kkkk_shortened_square_section }}</td>
+                <td style="background-color: #FFBD88">{{ section.sum_kkkk_full_square_section }}</td>
+            </tr>
+            {% endif %}
+            {% if section.sum_kkkkk_count_section != 0 %}
+            <tr>
+                <th style="background-color: #D5DBFB">5KK</th>
+                <td style="background-color: #D5DBFB">{{ section.sum_kkkkk_count_section }}</td>
+                <td style="background-color: #D5DBFB">{{ section.sum_kkkkk_small_square_section }}</td>
+                <td style="background-color: #D5DBFB">{{ section.sum_kkkkk_shortened_square_section }}</td>
+                <td style="background-color: #D5DBFB">{{ section.sum_kkkkk_full_square_section }}</td>
+            </tr>
+            {% endif %}
+            {% if section.sum_kkkkkk_count_section != 0 %}
+            <tr>
+                <th style="background-color: #EDD1EB">6KK</th>
+                <td style="background-color: #EDD1EB">{{ section.sum_kkkkkk_count_section }}</td>
+                <td style="background-color: #EDD1EB">{{ section.sum_kkkkkk_small_square_section }}</td>
+                <td style="background-color: #EDD1EB">{{ section.sum_kkkkkk_shortened_square_section }}</td>
+                <td style="background-color: #EDD1EB">{{ section.sum_kkkkkk_full_square_section }}</td>
+            </tr>
+            {% endif %}
+
+            <tr>
+                <th class="table-dark">ИТОГО</th>
+                <td class="table-dark">{{ section.sum_count_section }}</td>
+                <td class="table-dark">{{ section.sum_small_square_section }}</td>
+                <td class="table-dark">{{ section.sum_shortened_square_section }}</td>
+                <td class="table-dark">{{ section.sum_full_square_section }}</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
 {%  endblock %}
