--- a/apartments/templates/apartments/project_list.html
+++ b/apartments/templates/apartments/project_list.html
@@ -1,9 +1,13 @@
 {% extends 'apartments/base.html' %}
 
 {% block content %}
+{% if user.is_authenticated %}
     <div class="col-12 mb-5">
         <a class="btn btn-outline-primary" href="{% url 'apartments:p_create' %}">Добавить проект</a>
+        <a class="btn btn-outline-primary" href="{% url 'apartments:import_excel' %}">Импортировать данные</a>
+        <a class="btn btn-outline-primary" href="{% url 'apartments:export_excel' %}">Экспортировать данные</a>
     </div>
+{% endif %}
     <div class="container">
         <div class="row text-center">
             {% for project in projects %}
